--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
           </li>
         </ul>
       </nav>
-      <h1 class="title">no focus</h1>
-      <p class="title__decor">
+      <h1 class="title title__header">no focus</h1>
+      <p class="title__decor header__decor">
         Что делать, когда не можешь делать ничего <br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
     </header>
     <main class="content">
-      <section class="content__section">
+      <section class="content__section column">
         <h2 class="content__title">Почему сосредоточиться так сложно</h2>
         <div class="content__block">
           <article class="subblock">
@@ -90,8 +90,8 @@
           </article>
         </div>
       </section>
-      <section class="content__section">
-        <h2 class="content__title">Что снижает концентрацию внимания?</h2>
+      <section class="content__section line">
+        <h2 class="content__title answer">Что снижает концентрацию внимания?</h2>
         <div class="content__block">
           <article class="subblock">
             <h3 class="title__decor subtitle">Многозадачность</h3>
@@ -129,14 +129,14 @@
           </article>
         </div>
       </section>
-      <section class="content__section">
+      <section class="content__section column">
         <h2 class="content__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
         <div class="content__block">
           <h3 class="title__decor">
-              5 простых (на самом деле не очень) советов
+            5 простых (на самом деле не очень) советов
           </h3>
           <article class="subblock">
             <h3 class="title__decor subtitle title__advice">
@@ -201,33 +201,33 @@
       </section>
       <section class="content__section">
         <h2 class="title__decor image__title">А можно в картинках?</h2>
-        <div class="container__image">
+        <div class="container__image gallery">
           <img
-            class="content__image"
+            class="content__image sunset"
             src="/images/sunset.png"
             loading="lazy"
             alt="Картинка закат в горах"
           />
           <img
-            class="content__image"
+            class="content__image icecream"
             src="/images/ice-cream.png"
             loading="lazy"
             alt="Картинка тарелочка с мороженкой"
           />
           <img
-            class="content__image"
+            class="content__image tape"
             src="/images/tape.png"
             loading="lazy"
             alt="Картинка с касетой"
           />
           <img
-            class="content__image"
+            class="content__image books"
             src="/images/books.png"
             loading="lazy"
             alt="Картинка книг"
           />
           <img
-            class="content__image"
+            class="content__image street"
             src="/images/street.png"
             loading="lazy"
             alt="Картинка улицы"
@@ -236,7 +236,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <h1 class="title">focus</h1>
+      <h1 class="title title__footer">focus</h1>
     </footer>
   </body>
 </html>
