--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </section>
       <section class="content__section line">
         <h2 class="content__title answer">Что снижает концентрацию внимания?</h2>
-        <div class="content__block">
+        <div class="content__block reasons">
           <article class="subblock">
             <h3 class="title__decor subtitle">Многозадачность</h3>
             <p class="content__text">
