--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/images/favicon.ico" sizes="any" />
-    <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="/images/mobile-icon.png" />
-    <link rel="stylesheet" href="/fonts/fonts.css" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <title>Сложно сосредоточиться</title>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js" defer></script>
     <meta name="color-scheme" content="dark light" />
   </head>
   <body class="page">
@@ -53,7 +53,7 @@
       </p>
     </header>
     <main class="content">
-      <section class="content__section column">
+      <section class="content__section why">
         <h2 class="content__title">Почему сосредоточиться так сложно</h2>
         <div class="content__block">
           <article class="subblock">
@@ -129,7 +129,7 @@
           </article>
         </div>
       </section>
-      <section class="content__section column">
+      <section class="content__section advice">
         <h2 class="content__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
@@ -139,9 +139,9 @@
             5 простых (на самом деле не очень) советов
           </h3>
           <article class="subblock">
-            <h3 class="title__decor subtitle title__advice">
+            <h4 class="title__decor subtitle title__advice">
               Представьте небо и облака
-            </h3>
+            </h4>
             <p class="content__text">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах
@@ -154,7 +154,7 @@
             </p>
           </article>
           <article class="subblock">
-            <h3 class="title__decor subtitle title__advice">Включите музыку</h3>
+            <h4 class="title__decor subtitle title__advice">Включите музыку</h4>
             <p class="content__text">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -163,7 +163,7 @@
             </p>
           </article>
           <article class="subblock">
-            <h3 class="title__decor subtitle title__advice">Прогуляйтесь</h3>
+            <h4 class="title__decor subtitle title__advice">Прогуляйтесь</h4>
             <p class="content__text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a
@@ -171,7 +171,7 @@
                 href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                 target="_blank"
                 >показал</a
-              >
+              >,
               что созерцание природы повышает концентрацию, в то время как после
               просмотра городских пейзажей она наоборот понижается. Можно
               совместить прогулку с физическими упражнениями или бегом — так в
@@ -180,7 +180,7 @@
             </p>
           </article>
           <article class="subblock">
-            <h3 class="title__decor subtitle title__advice">Хорошо ешьте</h3>
+            <h4 class="title__decor subtitle title__advice">Хорошо ешьте</h4>
             <p class="content__text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
@@ -189,7 +189,7 @@
             </p>
           </article>
           <article class="subblock">
-            <h3 class="title__decor subtitle title__advice">Читайте</h3>
+            <h4 class="title__decor subtitle title__advice">Читайте</h4>
             <p class="content__text">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -204,31 +204,31 @@
         <div class="container__image gallery">
           <img
             class="content__image sunset"
-            src="/images/sunset.png"
+            src="./images/sunset.png"
             loading="lazy"
             alt="Картинка закат в горах"
           />
           <img
             class="content__image icecream"
-            src="/images/ice-cream.png"
+            src="./images/ice-cream.png"
             loading="lazy"
             alt="Картинка тарелочка с мороженкой"
           />
           <img
             class="content__image tape"
-            src="/images/tape.png"
+            src="./images/tape.png"
             loading="lazy"
             alt="Картинка с касетой"
           />
           <img
             class="content__image books"
-            src="/images/books.png"
+            src="./images/books.png"
             loading="lazy"
             alt="Картинка книг"
           />
           <img
             class="content__image street"
-            src="/images/street.png"
+            src="./images/street.png"
             loading="lazy"
             alt="Картинка улицы"
           />
@@ -236,7 +236,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <h1 class="title title__footer">focus</h1>
+      <h2 class="title title__footer">focus</h2>
     </footer>
   </body>
 </html>
